--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto = update
 
-
+server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
