--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/pessoaentidade
 
-spring.datasource.url=jdbc:mysql://localhost/pessoaentidade
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.hibernate.show-sql=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto = update
 
 server.error.include-stacktrace=never
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+
+
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:/schema.sql
